infrastructure/base/apps/fest-der-demokratie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fest-der-demokratie
  namespace: fest-der-demokratie
  labels:
    app.kubernetes.io/name: fest-der-demokratie
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fest-der-demokratie
